<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_title"
        style="@style/app_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_title_text"/>

    <TextView
        android:id="@+id/app_description"
        style="@style/app_description_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        android:text="@string/app_description_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/red_channel_wrapper"
        style="@style/input_box_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/red_channel"
        app:layout_constraintTop_toBottomOf="@+id/app_description"
        app:layout_constraintStart_toStartOf="parent">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/red_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="2"
        android:digits="@string/character_restriction_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/green_channel_wrapper"
        style="@style/input_box_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/green_channel"
        app:layout_constraintTop_toBottomOf="@+id/red_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/green_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:digits="@string/character_restriction_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/blue_channel_wrapper"
        style="@style/input_box_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blue_channel"
        app:layout_constraintTop_toBottomOf="@+id/green_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/blue_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:digits="@string/character_restriction_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_colour_button"
        style="@style/create_colour_button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_color_button_text"
        app:layout_constraintTop_toBottomOf="@+id/blue_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/display_color_bar"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_margin="8dp"
        android:text="@string/display_color_bar_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/create_colour_button"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>